...
                app:autoSizeMinTextSize="8sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="2sp"
                android:textColor="@color/white_on_orange" />

            <Button
                android:id="@+id/join_group_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:text="@string/join_group_chat"
...
